--- a/index.html
+++ b/index.html
@@ -1,9 +1,98 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title></title>
+    <title>Broadway</title>
   </head>
   <body>
-
+    <div id="home">
+      <h1>Broadway Design</h1>
+    </div>
+      <nav>
+        <br>
+            <a href="#home">Home</a>
+        </br>
+        <br>
+            <a href="#process">Process</a>
+        </br>
+        <br>
+            <a href="#work">Work</a>
+        </br>
+        <br>
+            <a href="#team">Team</a>
+        </br>
+        <br>
+            <a href="#contact">Contact</a>
+        </br>
+      </nav>
+      <!--"Process starts here"-->
+    <div id="process">
+      <h2>Our Process</h2>
+      <!--"Identify starts here"-->
+      <p>
+        <img src="resources/images/identify.svg">
+      </p>
+      <h3>Identify</h3>
+        <p>
+          We focus on the most important details.
+        </p>
+      <!--"Understand starts here"-->
+      <p>
+        <img src="resources/images/understand.svg">
+      </p>
+      <h3>Understand</h3>
+        <p>
+          We study our projects inside and out.
+        </p>
+      <!--"Execute starts here"-->
+      <p>
+        <img src="resources/images/execute.svg">
+      </p>
+      <h3>Execute</h3>
+        <p>
+          We put everything we have into our work.
+        </p>
+    </div>
+    <h3>Designed in New York</h3>
+    <!--"Work starts here"-->
+    <div id="work">
+      <h3>Portfolio</h3>
+        <p>
+          Coming Soon
+        </p>
+    </div>
+    <!--"Team starts here"-->
+    <div id="team">
+      <h3>Team</h3>
+        <p>
+          We're Hiring!
+        </p>
+    </div>
+    <!--"Contact starts here"-->
+    <div id="contact">
+      <h3>Contact</h3>
+        <p>
+          <br>
+            Phone: (555)-555-5555
+          </br>
+          <br>
+            E-mail: test@example.com
+          </br>
+          <br>
+            Twitter: @test
+          </br>
+        </p>
+    </div>
+    <nav>
+      <!--"Footer"-->
+      <div class="footer">
+        <p>
+          © Broadway 2017
+          <a href="#home">Home</a>
+          <a href="#process">Process</a>
+          <a href="#work">Work</a>
+          <a href="#team">Team</a>
+          <a href="#contact">Contact</a>
+        </p>
+    </nav>
   </body>
 </html>
