--- a/index.html
+++ b/index.html
@@ -2,28 +2,32 @@
 <html>
   <head>
     <title>Broadway</title>
+    <link rel="stylesheet" href="resources/css/style.css" type="text/css">
   </head>
   <body>
-    <div id="home">
-      <h1>Broadway Design</h1>
+    <!--"Home starts here"-->
+    <div class="image">
+      <div id="home">
+        <h1>Broadway Design</h1>
+      </div>
+        <nav>
+          <P>
+            <a class="navlinks" href="#home">Home</a>
+          </P>
+          <p>
+            <a class="navlinks" href="#process">Process</a>
+          </p>
+          <p>
+            <a class="navlinks" href="#work">Work</a>
+          </p>
+          <p>
+            <a class="navlinks" href="#team">Team</a>
+          </p>
+          <p>
+            <a class="navlinks" href="#contact">Contact</a>
+          </p>
+        </nav>
     </div>
-      <nav>
-        <br>
-            <a href="#home">Home</a>
-        </br>
-        <br>
-            <a href="#process">Process</a>
-        </br>
-        <br>
-            <a href="#work">Work</a>
-        </br>
-        <br>
-            <a href="#team">Team</a>
-        </br>
-        <br>
-            <a href="#contact">Contact</a>
-        </br>
-      </nav>
       <!--"Process starts here"-->
     <div id="process">
       <h2>Our Process</h2>
@@ -52,7 +56,9 @@
           We put everything we have into our work.
         </p>
     </div>
-    <h3>Designed in New York</h3>
+    <div class="image" id="midway">
+      <h3>Designed in New York</h3>
+    </div>
     <!--"Work starts here"-->
     <div id="work">
       <h3>Portfolio</h3>
@@ -71,27 +77,25 @@
     <div id="contact">
       <h3>Contact</h3>
         <p>
-          <br>
-            Phone: (555)-555-5555
-          </br>
-          <br>
-            E-mail: test@example.com
-          </br>
-          <br>
-            Twitter: @test
-          </br>
+          Phone: (555)-555-5555
+        </p>
+        <p>
+          E-mail: test@example.com
+        </p>
+        <p>
+          Twitter: @test
         </p>
     </div>
     <nav>
       <!--"Footer"-->
-      <div class="footer">
+      <div id="footer">
         <p>
           © Broadway 2017
-          <a href="#home">Home</a>
-          <a href="#process">Process</a>
-          <a href="#work">Work</a>
-          <a href="#team">Team</a>
-          <a href="#contact">Contact</a>
+          <a class="navlinks" href="#home">Home</a>
+          <a class="navlinks" href="#process">Process</a>
+          <a class="navlinks" href="#work">Work</a>
+          <a class="navlinks" href="#team">Team</a>
+          <a class="navlinks" href="#contact">Contact</a>
         </p>
     </nav>
   </body>
